get programações por data

--- a/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
@@ -32,10 +32,10 @@
 
     <div style="margin: 2%;">
       <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
-          <label>Dia de Exibição</label>
+          <label>Data de Exibição</label>
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
-          <input pInputText type="text" name="diaExibicao" class="campo" [(ngModel)]="programacao.diaExibicao">
+          <input pInputText type="text" name="dataExibicao" class="campo" [(ngModel)]="programacao.dataExibicao">
       </div>
     </div>
 
