--- a/desafiourbana-ui - Copia/src/app/grade/grade.component.css
+++ b/desafiourbana-ui - Copia/src/app/grade/grade.component.css
@@ -2,6 +2,8 @@
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
   
   #customers td, #customers th {
