--- a/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
@@ -35,7 +35,7 @@
           <label>Data de Exibição</label>
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
-          <input pInputText type="text" name="dataExibicao" class="campo" [(ngModel)]="programacao.dataExibicao">
+          <input pInputText type="date" name="dataExibicao" class="campo" [(ngModel)]="programacao.dataExibicao">
       </div>
     </div>
 
